Fixed grid (react-bootstrap) and fixed navbar (z-index)

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,8 @@
   /* animation: App-logo-spin infinite 20s linear; */
   height: 80px;
 	float: left;
+	position: relative;
+	top: -20px;
 }
 
 .App-header {
@@ -13,16 +15,15 @@
   height: 120px;
   padding: 20px;
   color: white;
-	position:absolute;
+	position: absolute;
 	border:5px solid #ff53ff;
 }
 
 .Head {
- position: relative;
  background-color: #ff53ff;
  border:3px solid black;
- top: 30px;
-
+ z-index: 100;
+ position: relative;
 }
 
 
@@ -46,6 +47,8 @@ h1 {
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
+	position: relative;
+	top: -5px;
 }
 
 h2 {
@@ -55,6 +58,8 @@ h2 {
   text-align: center;
   font-weight: normal;
   color: black;
+	margin-top: 40px;
+	margin-bottom: 10px;
 }
 
 p {
