--- a/frontend/src/Page.css
+++ b/frontend/src/Page.css
@@ -1,6 +1,5 @@
 body {
 	text-align: left;
-	padding: 20px;
 	font-size: medium;
 }
 
@@ -8,7 +7,7 @@ section {
 	position: relative;
 	top: 180px;
 	font-size: medium;
-	padding-right: 20px;
+	padding-right: 40px;
 	padding-left: 40px;
 	text-align: justify;
 	text-justify: inter-word;
